Add request DTOs for task and user story management, implement comment handling, and enhance security configuration